# skyward-common

./: .env.example  .gitignore  CLAUDE.md  KNOWN_ISSUES.md  MIGRATION_v1.5.0.md  README.md  pyproject.toml  requirements.txt
docs/: backlinks_offset_pagination_qa.md  dataforseo_naming_convention.md  dataforseo_next_steps.md  dataforseo_qa_checklist.md
scripts/: apply_domain_mapping.py  check_meta_drift.py  create_dfs_debug_log_table.py  inventory_dataforseo_domains.py  inventory_migrated_domains.py  live_qa_migrated_tables.py  live_smoke_meta.py  migrate_dataforseo_hotfix_renames.py  migrate_dataforseo_manifest.py  migrate_dataforseo_tables.py  migrate_meta.py  migrate_meta_to_supabase.py  reconcile_bq_into_supabase.py  rekey_seopipelinedev.py  review_domain_mapping.py  seed_meta.py
tests/: conftest.py  conftest_pg.py  test_bigquery_client.py  test_bigquery_no_interactive.py  test_bq_client_no_stale_methods.py  test_cli.py  test_cli_llm.py  test_config.py  test_config_supabase.py  test_create_dfs_debug_log_table.py  test_data_hub_clients.py  test_data_hub_datasets.py  test_data_hub_domains.py  test_data_hub_ids.py  test_data_hub_projects.py  test_dataforseo_attempt_record.py  test_dataforseo_base_endpoint.py  test_dataforseo_capture.py  test_dataforseo_client_slim.py  test_dataforseo_client_wiring.py  test_dataforseo_debug_log.py  test_dataforseo_debug_wiring.py  test_dataforseo_exceptions.py  test_dataforseo_meta_supabase.py  test_dataforseo_post_status.py  test_functions_import.py  test_functions_uuid_helpers.py  test_hub.py  test_llm_costs.py  test_llm_live.py  test_llm_providers.py  test_llm_session.py  test_meta_clients.py  test_meta_datasets.py  test_meta_domain_lookup.py  test_meta_domains.py  test_meta_edge_cases.py  test_meta_init_ids.py  test_meta_projects.py  (+5 more)
(+47 files in other folders)
