[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyward-common"
version = "1.0.0"
description = "Shared infrastructure for Skyward projects"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery>=3.0.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tldextract>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skyward"]

[tool.pytest.ini_options]
testpaths = ["tests"]
